log
Wed 03 May 2023 06:00:33 PM UTC: 
 tests:  0|5
total_score: 0/70
ae82556
Wed 03 May 2023 06:23:37 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:36: error: expected ‘;’ before ‘:’ token
   63 |               pushBack(list, nuevo):
      |                                    ^
      |                                    ;
Compilation failed
293d7ef
Wed 03 May 2023 06:23:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8dc9aff
